# ESP32S3-BLE-TEST

./: .gitignore  sdkconfig  test-branch.txt
main/: CMakeLists.txt  ble_demo.c  ble_demo.h  ble_file_transfer.c  ble_file_transfer.h  hid_device_le_prf.c  main.c
